[package]
name = "diesel_logger"
version = "0.3.0"
authors = [
    "Josh Holmer <jholmer.in@gmail.com>",
    "Aleksey Zholobenko",
    "Georg Semmler"
]
description = "Times and logs queries executed by diesel. Adapted for GST."
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dependencies]
log = "0.4.1"
chrono = "0.4.11"

[dependencies.diesel]
default-features = false
features = ["chrono", "serde_json", "r2d2"]
version = "=1.4.4"

[patch.crates-io]
diesel = { git = "https://github.com/aleshaleksey/diesel", rev = "d159e5361a2d1227fd60ba3e05227af5e07c679d" }
diesel_derives = { git = "https://github.com/aleshaleksey/diesel", rev = "d159e5361a2d1227fd60ba3e05227af5e07c679d" }