[package]
name = "diesel_logger"
version = "0.3.0"
authors = [
    "Josh Holmer <jholmer.in@gmail.com>",
    "Aleksey Zholobenko",
    "Georg Semmler"
]
description = "Times and logs queries executed by diesel. Adapted for GST."
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-logger"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-logger"
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dependencies]
tracing = "0.1"
chrono = "0.4.11"

[dependencies.diesel]
default-features = false
features = ["chrono", "serde_json", "r2d2"]
git = "https://github.com/diesel-rs/diesel"
rev = "ee00374f79d865e9d464517d603d0ed22d12be0d"
